--- a/testomonial/templates/testomonial/testimonial_list.html
+++ b/testomonial/templates/testomonial/testimonial_list.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
 
-
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
@@ -10,13 +9,13 @@
     </div>
 {% endblock %}
 
-
 {% block content %}
-
-<ul>
-    {% for testimonial in testimonials %}
-        <li>{{ testimonial.author }} - {{ testimonial.content }}</li>
-    {% endfor %}
-</ul>
-
+    <div class="container">
+        <h2>Testimonials</h2>
+        <ul>
+            {% for testimonial in testimonials %}
+                <li>{{ testimonial.author }} - {{ testimonial.content }}</li>
+            {% endfor %}
+        </ul>
+    </div>
 {% endblock %}
