--- a/testomonial/templates/testomonial/add_testimonial.html
+++ b/testomonial/templates/testomonial/add_testimonial.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
 
-
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
@@ -10,15 +9,44 @@
     </div>
 {% endblock %}
 
-
 {% block content %}
+    <div class="overlay"></div>
+    <div class="container">
+        <h2 class="text-center">Testimonials</h2>
+        <div class="row">
+            <div class="col-md-8 offset-md-2">
+                <ul class="list-group mb-4">
+                    {% for testimonial in testimonials %}
+                        <li class="list-group-item">
+                            <strong>{{ testimonial.author }}</strong><br>
+                            {{ testimonial.content }}
+                        </li>
+                    {% endfor %}
+                </ul>
 
-<div class="overlay">
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Submit</button>
-</form>
-<div>
-
+                <div class="card">
+                    <div class="card-body">
+                        <h4 class="card-title">Add Testimonial</h4>
+                        <form method="post">
+                            {% csrf_token %}
+                            <div class="mb-3">
+                                <label for="author" class="form-label">Author</label>
+                                <input type="text" class="form-control" id="author" name="author">
+                            </div>
+                            <div class="mb-3">
+                                <label for="product" class="form-label">Product</label>
+                                <input type="text" class="form-control" id="product" name="product">
+                            </div>
+                            <div class="mb-3">
+                                <label for="content" class="form-label">Content</label>
+                                <textarea class="form-control" id="content" name="content" rows="4"></textarea>
+                            </div>
+                            <button class="btn btn-primary" type="submit">Submit</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
+
