--- a/testomonial/templates/testomonial/testimonial_list.html
+++ b/testomonial/templates/testomonial/testimonial_list.html
@@ -10,12 +10,22 @@
 {% endblock %}
 
 {% block content %}
+    <div class="overlay"></div>
     <div class="container">
-        <h2>Testimonials</h2>
-        <ul>
-            {% for testimonial in testimonials %}
-                <li>{{ testimonial.author }} - {{ testimonial.content }}</li>
-            {% endfor %}
-        </ul>
+        <h2 class="text-center mt-4">Testimonials</h2>
+        <div class="row">
+            <div class="col-md-8 offset-md-2">
+                <ul class="list-group mb-4">
+                    {% for testimonial in testimonials %}
+                        <li class="list-group-item">
+                            <strong>{{ testimonial.author }}</strong> - {{ testimonial.product }}<br>
+                            {{ testimonial.content }}<br>
+                            Created On: {{ testimonial.created_at|date:"F j, Y" }}
+                        </li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
     </div>
 {% endblock %}
+
